01-host-three-tier/balman/k8s/db.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todolist-datastore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todolist-datastore
      role: datastore
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: todolist-datastore
        role: datastore
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: postgres-config
        image: balman/todolist-pg:v1
        imagePullPolicy: IfNotPresent
        name: todolist-datastore
        ports:
        - containerPort: 5432
          protocol: TCP
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgredb
      restartPolicy: Always
      volumes:
      - name: postgredb
        persistentVolumeClaim:
          claimName: postgres-pv-claim
---
apiVersion: v1
kind: Service
metadata:
  name: todolist-datastore
  labels:
    app: todolist-datastore
spec:
  # type: NodePort # Sets service type
  ports:
    - port: 5432
  selector:
    app: todolist-datastore
